--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Contact me at <a href="nicolas.dupre.apple@gmail.com">contact support</a></p>
+<p>Contact me at <a href="mailto:nicolas.dupre.apple@gmail.com">nicolas.dupre.apple@gmail.com</a></p>
 
       <footer class="site-footer">
 
